--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -10,13 +10,12 @@
       <meta itemprop="address" content="{{ site.resume_contact_address }}"/>
 
       <header class="page-header">
-
-        <!-- You can turn off the avatar in _config.yml by setting to false -->
+ 
         {% if site.resume_avatar == 'true' %}
-        <img src="images/avatar.jpg" alt="my photo" class="avatar no-print" itemprop="image">
+        <!-- <img src="images/ljh_photo.jpg" alt="my photo" class="avatar no-print" itemprop="image"> -->
+        <img src="images/ljh_photo.jpeg" alt="my photo" class="avatar" itemprop="image">
         {% endif %}
-
-        <!-- Your name is defined in the _config.yml file -->
+ 
         <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
 
         <!-- To display contact info here, change `display_header_contact_info` value in _config.yml to true -->
@@ -26,9 +25,9 @@
         </div>
         {% endif %}
 
-        <div class="title-bar no-print">
-
-          <!-- Your title is also defined in the _config.yml file -->
+        <!-- <div class="title-bar no-print"> -->
+        <div class="title-bar">
+ 
           <h2 class="header-title" itemprop="jobTitle">{{ site.resume_title }}</h2>
 
           <!-- This is the markup for the icon links; moved out to an include because it's very verbose, and you shouldn't ever need to edit the markup (unless you want to re-order the icons); if you want to customize which links appear, define them in the _config.yml file -->
@@ -47,30 +46,11 @@
         {% endif %}
 
       </header>
-
-      {% if site.resume_section_experience %}
-      <!-- begin Experience -->
-      <section class="content-section">
-
-        <header class="section-header">
-          <h2>Experience</h2>
-        </header>
-
-        {% for job in site.data.experience %}
-        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">{{ job.company }}</h3>
-          <h4 class="resume-item-details" itemprop="description">{{ job.position }} &bull; {{ job.duration }}</h4>
-          <p class="resume-item-copy">{{ job.summary }}</p>
-        </div><!-- end of resume-item -->
-        {% endfor %}
-
-      </section>
-      <!-- end Experience -->
-      {% endif %}
+ 
 
 
       {% if site.resume_section_education %}
-      <!-- begin Education -->
+     
       <section class="content-section">
         <header class="section-header">
           <h2>Education</h2>
@@ -86,9 +66,7 @@
               {% for award in education.awards %}
               <li>{{ award.award }}</li>
               {% endfor %}
-            </ul></h5>
-
-
+            </ul></h5> 
           <p class="resume-item-copy">{{ education.summary }}</p>
         </div>
         {% endfor %}
@@ -134,46 +112,7 @@
       </section>
       <!-- end Skills -->
       {% endif %}
-
-      {% if site.resume_section_recognition %}
-      <!-- begin Recognition -->
-      <section class="content-section">
-
-        <header class="section-header">
-          <h2>Recognition</h2>
-        </header>
-
-        {% for recognition in site.data.recognitions %}
-        <div class="resume-item">
-          <h3 class="resume-item-title" itemprop="award">{{ recognition.award }}</h3>
-          <h4 class="resume-item-details">{{ recognition.organization }} &bull; {{ recognition.year }}</h4>
-          <p class="resume-item-copy">{{ recognition.summary }}</p>
-        </div>
-        {% endfor %}
-
-      </section>
-      <!-- end Recognition -->
-      {% endif %}
-
-      {% if site.resume_section_associations %}
-      <!-- begin Associations -->
-      <section class="content-section">
-
-        <header class="section-header">
-          <h2>Associations</h2>
-        </header>
-
-        {% for association in site.data.associations %}
-        <div class="resume-item" itemscope itemprop="memberOf" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">{% if association.url %}<a href="{{ association.url }}">{{ association.organization }}</a>{% else %}{{ association.organization }}{% endif %}</h3>
-          <h4 class="resume-item-details" itemprop="description">{{ association.role }} &bull; {{ association.year }}</h4>
-          <p class="resume-item-copy">{{ association.summary }}</p>
-        </div>
-        {% endfor %}
-
-      </section>
-      <!-- end Associations -->
-      {% endif %}
+ 
 
       {% if site.resume_section_interests %}
       <!-- begin Interests -->
@@ -232,8 +171,8 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+        <!-- <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p> -->
+        <p class="footer-line">aloha_jh@naver.com</p>
       </footer>
 
     </div>
