--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,9 +9,9 @@
 html {
   background: $white;
 }
-
+ 
 body{
-  @include serif;
+  //@include serif;
   color: $text_color;
   font-size: 16px;
   line-height: 1.5;
