--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -18,4 +18,4 @@ $body-font: Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans
 $body-font-size: 13px !default;
 
 // Monospace font stack
-$mono-font: Consolas, "Liberation Mono", Menlo, Courier, monospace !default;
+$mono-font: "Liberation Mono", Menlo, Courier, monospace !default;
