--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -2,7 +2,10 @@
 <html>
 
   {% include head.html %}
-
+  <style>
+    .img-wrap{}
+    img{ width:50%;}
+  </style>
   <body class="theme-{% if site.resume_theme %}{{ site.resume_theme }}{% endif %}">
 
     <div class="wrapper" itemscope itemtype="http://schema.org/Person">
@@ -48,30 +51,20 @@
       </header>
  
 
-
-      {% if site.resume_section_education %}
-     
-      <section class="content-section">
+      {% if site.resume_section_experience %} 
+      <section class="content-section"> 
         <header class="section-header">
-          <h2>Education</h2>
-        </header>
-
-        {% for education in site.data.education %}
-        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
-          <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
-          <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5>
-          <p class="resume-item-copy" itemprop="description">
-            <ul class="resume-item-list">
-              {% for award in education.awards %}
-              <li>{{ award.award }}</li>
-              {% endfor %}
-            </ul></h5> 
-          <p class="resume-item-copy">{{ education.summary }}</p>
-        </div>
+          <h2>Career</h2>
+        </header> 
+        {% for job in site.data.experience %}
+        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
+          <h3 class="resume-item-title" itemprop="name">{{ job.company }}</h3>
+          <h4 class="resume-item-details" itemprop="description">{{ job.position }} &bull; {{ job.duration }}</h4>
+          <p class="resume-item-copy">{{ job.summary }}</p>
+        </div> 
         {% endfor %}
-      </section>
-      <!-- end Education -->
+
+      </section> 
       {% endif %}
 
 
@@ -82,13 +75,15 @@
           <h2>Projects</h2>
         </header>
 
+
         {% for project in site.data.projects %}
         <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
           <meta itemprop="creator" content="{{ site.resume_name }}" itemtype="http://schema.org/Person" />
           <h3 class="resume-item-title" itemprop="name">{% if project.url %}<a href="{{ project.url }}" itemprop="url">{{ project.project }}</a>{% else %}{{ project.project }}{% endif %}</h3>
-          <h4 class="resume-item-details" itemprop="description">{{ project.role }}  &bull; {{ project.duration }}</h4>
+          <h4 class="resume-item-details" itemprop="description">{{ project.role }} {% if project.duration %}  &bull;  {{project.duration }}{%else%} {%endif%}</h4>
       
-          <p class="resume-item-copy">{{ project.description }}</p>  
+          <p class="resume-item-copy">{{ project.description }}</p> 
+          {%if project.img%}<div class="img-wrap"> {{project.img}} <div>{%else%} {%endif%}
           <p class="resume-item-copy">{{ project.summary }}</p>
   
  
