--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -179,7 +179,7 @@
 
       <footer class="page-footer">
         <!-- <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p> -->
-        <p class="footer-line">aloha_jh@naver.com</p>
+        <!-- <p class="footer-line">https://aloha-jh.github.io/jeongha/</p> -->
       </footer>
 
     </div>
