--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -50,7 +50,7 @@
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
-        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a>
+        <!-- <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a> -->
         {% elsif site.resume_looking_for_work == 'no' %}
         <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
         {% else %}
@@ -58,6 +58,23 @@
 
       </header>
  
+
+      {% if site.resume_section_skills %}
+   
+      <section class="content-section"> 
+        <header class="section-header">
+          <h2>Skills</h2>
+        </header>
+        {% for skill in site.data.skills %}
+        <div class="resume-item">
+          {% if skill.skill %}<h4 class="resume-item-details">{{ skill.skill }}</h4> {%else%} {%endif%}
+          <p class="resume-item-copy">{{ skill.description }}</p>
+        </div>
+        {% endfor %} 
+      </section> 
+      {% endif %}
+
+
 
       {% if site.resume_section_experience %} 
       <section class="content-section"> 
@@ -102,23 +119,7 @@
       <!-- end Projects -->
       {% endif %}
 
-      {% if site.resume_section_skills %}
-      <!-- begin Skills -->
-      <section class="content-section">
-
-        <header class="section-header">
-          <h2>Skills</h2>
-        </header>
-        {% for skill in site.data.skills %}
-        <div class="resume-item">
-          <h4 class="resume-item-details">{{ skill.skill }}</h4>
-          <p class="resume-item-copy">{{ skill.description }}</p>
-        </div>
-        {% endfor %}
-
-      </section>
-      <!-- end Skills -->
-      {% endif %}
+    
  
 
       {% if site.resume_section_interests %}
