--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -68,7 +68,7 @@
         {% for skill in site.data.skills %}
         <div class="resume-item">
           {% if skill.skill %}<h4 class="resume-item-details">{{ skill.skill }}</h4> {%else%} {%endif%}
-          <p class="resume-item-copy">{{ skill.description }}</p>
+          <p class="resume-item-copy"><ul class="resume-item-list">{{ skill.description }}</ul></p>
         </div>
         {% endfor %} 
       </section> 
@@ -180,7 +180,7 @@
 
       <footer class="page-footer">
         <!-- <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p> -->
-        <!-- <p class="footer-line">https://aloha-jh.github.io/jeongha/</p> -->
+         <p class="footer-line">https://aloha-jh.github.io/jeongha/</p>  
       </footer>
 
     </div>
