--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -1,190 +1,213 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
-  <style>
-    .img-wrap{}
-    img{ width:50%;}
-    .skills-wrap{ margin-bottom:50px;}
-    .skills-wrap span{display: inline-block;
+{% include head.html %}
+<style>
+  .img-wrap {}
+
+  img {
+    width: 50%;
+  }
+
+  .skills-wrap {
+    margin-bottom: 50px;
+  }
+
+  .skills-wrap span {
+    display: inline-block;
     border: 1px solid #3d68e0;
     border-radius: 13px;
     color: #0830a0;
     padding: 1px 6px;
     margin: 2px;
-    line-height: 19px;}
-  </style>
-  <body class="theme-{% if site.resume_theme %}{{ site.resume_theme }}{% endif %}">
+    line-height: 19px;
+  }
 
-    <div class="wrapper" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="telephone" content="{{ site.resume_contact_telephone }}"/>
-      <meta itemprop="address" content="{{ site.resume_contact_address }}"/>
+  .resume-item-title.title-kr {
+    font-size: 1.4rem;
+  }
 
-      <header class="page-header">
- 
-        {% if site.resume_avatar == 'true' %}
-        <!-- <img src="images/ljh_photo.jpg" alt="my photo" class="avatar no-print" itemprop="image"> -->
-        <img src="images/ljh_photo.jpeg" alt="my photo" class="avatar" itemprop="image">
-        {% endif %}
- 
-        <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
+  hr {
+    border-color: #c7c7c7;
+    color: red;
+    border-top: 0 none;
+  }
+</style>
 
-        <!-- To display contact info here, change `display_header_contact_info` value in _config.yml to true -->
-        {% if site.display_header_contact_info == 'true' %}
-        <div class="header-contact-info">
-          <p>{{ site.resume_header_contact_info }}</p>
-        </div>
-        {% endif %}
+<body class="theme-{% if site.resume_theme %}{{ site.resume_theme }}{% endif %}">
 
-        <!-- <div class="title-bar no-print"> -->
-        <div class="title-bar">
- 
-          <h2 class="header-title" itemprop="jobTitle">{{ site.resume_title }}</h2>
+  <div class="wrapper" itemscope itemtype="http://schema.org/Person">
+    <meta itemprop="telephone" content="{{ site.resume_contact_telephone }}" />
+    <meta itemprop="address" content="{{ site.resume_contact_address }}" />
 
-          <!-- This is the markup for the icon links; moved out to an include because it's very verbose, and you shouldn't ever need to edit the markup (unless you want to re-order the icons); if you want to customize which links appear, define them in the _config.yml file -->
-          {% include icon-links.html %}
-        </div>
+    <header class="page-header">
 
-        <div class="executive-summary" itemprop="description">
-          {{ site.resume_header_intro }}
-        </div>
+      {% if site.resume_avatar == 'true' %}
+      <!-- <img src="images/ljh_photo.jpg" alt="my photo" class="avatar no-print" itemprop="image"> -->
+      <img src="images/ljh_photo.jpeg" alt="my photo" class="avatar" itemprop="image">
+      {% endif %}
 
-        {% if site.resume_looking_for_work == 'yes' %}
-        <!-- <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a> -->
-        {% elsif site.resume_looking_for_work == 'no' %}
-        <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
-        {% else %}
-        {% endif %}
+      <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
 
+      <!-- To display contact info here, change `display_header_contact_info` value in _config.yml to true -->
+      {% if site.display_header_contact_info == 'true' %}
+      <div class="header-contact-info">
+        <p>{{ site.resume_header_contact_info }}</p>
+      </div>
+      {% endif %}
+
+      <!-- <div class="title-bar no-print"> -->
+      <div class="title-bar">
+
+        <h2 class="header-title" itemprop="jobTitle">{{ site.resume_title }}</h2>
+
+        <!-- This is the markup for the icon links; moved out to an include because it's very verbose, and you shouldn't ever need to edit the markup (unless you want to re-order the icons); if you want to customize which links appear, define them in the _config.yml file -->
+        {% include icon-links.html %}
+      </div>
+
+      <div class="executive-summary" itemprop="description">
+        {{ site.resume_header_intro }}
+      </div>
+
+      {% if site.resume_looking_for_work == 'yes' %}
+      <!-- <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a> -->
+      {% elsif site.resume_looking_for_work == 'no' %}
+      <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
+      {% else %}
+      {% endif %}
+
+    </header>
+
+
+    {% if site.resume_section_skills %}
+
+    <section class="content-section">
+      <header class="section-header">
+        <h2>Skills</h2>
       </header>
- 
-
-      {% if site.resume_section_skills %}
-   
-      <section class="content-section"> 
-        <header class="section-header">
-          <h2>Skills</h2>
-        </header>
-        {% for skill in site.data.skills %}
-        <div class="resume-item">
-          {% if skill.skill %}<h4 class="resume-item-details">{{ skill.skill }}</h4> {%else%} {%endif%}
-          <p class="resume-item-copy"><ul class="resume-item-list">{{ skill.description }}</ul></p>
-        </div>
-        {% endfor %} 
-      </section> 
-      {% endif %}
+      {% for skill in site.data.skills %}
+      <div class="resume-item">
+        {% if skill.skill %}<h4 class="resume-item-details">{{ skill.skill }}</h4> {%else%} {%endif%}
+        <p class="resume-item-copy">
+        <ul class="resume-item-list">{{ skill.description }}</ul>
+        </p>
+      </div>
+      {% endfor %}
+    </section>
+    {% endif %}
 
 
 
-      {% if site.resume_section_experience %} 
-      <section class="content-section"> 
-        <header class="section-header">
-          <h2>Career</h2>
-        </header> 
-        {% for job in site.data.experience %}
-        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">{{ job.company }}</h3>
-          <h4 class="resume-item-details" itemprop="description">{{ job.position }} &bull; {{ job.duration }}</h4>
-          <p class="resume-item-copy">{{ job.summary }}</p>
-        </div> 
-        {% endfor %}
+    {% if site.resume_section_experience %}
+    <section class="content-section">
+      <header class="section-header">
+        <h2>Career</h2>
+      </header>
+      {% for job in site.data.experience %}
+      <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
+        <h3 class="resume-item-title title-kr" itemprop="name">{{ job.company }}</h3>
+        <h4 class="resume-item-details" itemprop="description">{{ job.position }} &bull; {{ job.duration }}</h4>
+        <p class="resume-item-copy">{{ job.summary }}</p>
+      </div>
+      {% endfor %}
 
-      </section> 
-      {% endif %}
-
-
-      {% if site.resume_section_projects %}
-      <!-- begin Projects -->
-      <section class="content-section">
-        <header class="section-header">
-          <h2>Projects</h2>
-        </header>
+    </section>
+    {% endif %}
 
 
-        {% for project in site.data.projects %}
-        <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-          <meta itemprop="creator" content="{{ site.resume_name }}" itemtype="http://schema.org/Person" />
-          <h3 class="resume-item-title" itemprop="name">{% if project.url %}<a href="{{ project.url }}" itemprop="url">{{ project.project }}</a>{% else %}{{ project.project }}{% endif %}</h3>
-          <h4 class="resume-item-details" itemprop="description">{{ project.role }} {% if project.duration %}  &bull;  {{project.duration }}{%else%} {%endif%}</h4>
-      
-          {%if project.description %} <p class="resume-item-copy"> {{ project.description }} <br/><br/></p> {%else%} {%endif%}
-          {%if project.img%}<div class="img-wrap"> {{project.img}} <div>{%else%} {%endif%}
-          <p class="resume-item-copy">{{ project.summary }}</p>
-          {%if project.skills%}<p class="skills-wrap"> {{project.skills}} </p> {%else%} {%endif%}
- 
-        </div>
-        {% endfor %}
+    {% if site.resume_section_projects %}
+    <!-- begin Projects -->
+    <section class="content-section">
+      <header class="section-header">
+        <h2>Projects</h2>
+      </header>
 
-      </section>
-      <!-- end Projects -->
-      {% endif %}
 
-    
- 
+      {% for project in site.data.projects %}
+      <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+        <meta itemprop="creator" content="{{ site.resume_name }}" itemtype="http://schema.org/Person" />
+        <h3 class="resume-item-title" itemprop="name">{% if project.url %}<a href="{{ project.url }}" itemprop="url">{{
+            project.project }}</a>{% else %}{{ project.project }}{% endif %}</h3>
+        <h4 class="resume-item-details" itemprop="description">{{ project.role }} {% if project.duration %} &bull;
+          {{project.duration }}{%else%} {%endif%}</h4>
 
-      {% if site.resume_section_interests %}
-      <!-- begin Interests -->
-      <section class="content-section">
+        {%if project.description %} <p class="resume-item-copy"> {{ project.description }} <br /><br /></p> {%else%}
+        {%endif%}
+        {%if project.img%}<div class="img-wrap"> {{project.img}} <div>{%else%} {%endif%}
+            <p class="resume-item-copy">{{ project.summary }}</p>
+            {%if project.skills%}<p class="skills-wrap"> {{project.skills}} </p> {%else%} {%endif%}
 
-        <header class="section-header">
-          <h2>Outside Interests</h2>
-        </header>
+          </div>
+          {% endfor %}
 
-        <div class="resume-item">
-          <ul class="resume-item-list">
-            {% for interest in site.data.interests %}
-            <li>{{ interest.description }}</li>
-            {% endfor %}
-          </ul>
-        </div>
+    </section>
+    <!-- end Projects -->
+    {% endif %}
 
-      </section>
-      <!-- end Interests -->
-      {% endif %}
 
-      {% if site.resume_section_links %}
-      <!-- begin Links -->
-      <section class="content-section">
+    {% if site.resume_section_interests %}
+    <!-- begin Interests -->
+    <section class="content-section">
 
-        <header class="section-header">
-          <h2>Additional Links</h2>
-        </header>
+      <header class="section-header">
+        <h2>Outside Interests</h2>
+      </header>
 
-        <div class="resume-item">
-          <ul class="resume-item-list">
-            {% for link in site.data.links %}
-            <li><a href={{ link.url }} itemprop="url">{{ link.description }}</a></li>
-            {% endfor %}
-          </ul>
-        </div>
+      <div class="resume-item">
+        <ul class="resume-item-list">
+          {% for interest in site.data.interests %}
+          <li>{{ interest.description }}</li>
+          {% endfor %}
+        </ul>
+      </div>
 
-      </section>
-      <!-- end Links -->
-      {% endif %}
+    </section>
+    <!-- end Interests -->
+    {% endif %}
 
-      {% if site.resume_print_social_links %}
-      <!-- begin Print Social Links -->
-      <section class="content-section print-only">
+    {% if site.resume_section_links %}
+    <!-- begin Links -->
+    <section class="content-section">
 
-        <header class="section-header">
-          <h2>Social Links</h2>
-        </header>
+      <header class="section-header">
+        <h2>Additional Links</h2>
+      </header>
 
-        <div class="resume-item">
+      <div class="resume-item">
+        <ul class="resume-item-list">
+          {% for link in site.data.links %}
+          <li><a href={{ link.url }} itemprop="url">{{ link.description }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+
+    </section>
+    <!-- end Links -->
+    {% endif %}
+
+    {% if site.resume_print_social_links %}
+    <!-- begin Print Social Links -->
+    <section class="content-section print-only">
+
+      <header class="section-header">
+        <h2>Social Links</h2>
+      </header>
+
+      <div class="resume-item">
         {% include print-social-links.html %}
-        </div>
+      </div>
 
-      </section>
-      <!-- end Print Social Links -->
-      {% endif %}
+    </section>
+    <!-- end Print Social Links -->
+    {% endif %}
 
-      <footer class="page-footer">
-        <!-- <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p> -->
-         <p class="footer-line">https://aloha-jh.github.io/jeongha/</p>  
-      </footer>
+    <footer class="page-footer">
+      <!-- <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p> -->
+      <p class="footer-line">https://aloha-jh.github.io/jeongha/</p>
+    </footer>
 
-    </div>
+  </div>
 
-  </body>
+</body>
 
 </html>
